fix: コース色付け

--- a/banana-home.html
+++ b/banana-home.html
@@ -741,6 +741,7 @@
         .text-fade{color: #ddd;}
         .text-play{color:#94cc36;}
         .text-y-green{color: #c9e99b;}
+        .text-yellow{color: #fbf420;}
 
         @media screen and (max-width: 768px) {
             .main{
@@ -957,14 +958,14 @@
                             <article class="course-card" data-year="2025" role="listitem">
                             <img src="./images/how-to-buy.webp" alt="注文方法" width="60" height="60">
                             <div class="labels">
-                                <p class="code">HOWTOBUY <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
+                                <p class="code">HOWTOBUY <span class="star-icon"><i class="text-yellow fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./how-to-buy.html">注文方法</a>
                                 <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
                                 <p class="meta">
                                 <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
                                 <span class="badge"><span class="text-primary">movie</span></span>
-                                <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
-                                <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="text-danger fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="text-danger fa-solid fa-pen" aria-hidden="true"></i></span>
                                 <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
                                 <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
                                 <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
@@ -975,7 +976,7 @@
                             <article class="course-card" data-year="2025" role="listitem">
                             <img src="./images/doujin_phys.webp" alt="技術同人誌『フランクフルト』 買いにきてんぽ〜 300円 読んで学士(情報科学)目指すんぽ！" width="60">
                             <div class="labels">
-                                <p class="code">DOUJIN25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
+                                <p class="code">DOUJIN25 <span class="star-icon"><i class="text-yellow fa-solid fa-star" aria-hidden="true"></i></span></p>
                                 <a class="title" href="./doujin25.html">技術同人誌『フランクフルト』</a>
                                 <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
                                 <p class="meta">
@@ -988,6 +989,24 @@
                                     <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
                                 </p>
                             </div>
+                            </article>
+
+                            <article class="course-card" data-year="2025" role="listitem">
+                                <img src="./images/NPTS.webp" alt="NPTS" width="60">
+                                <div class="labels">
+                                    <p class="code">GENKA25 <span class="star-icon"><i class="text-yellow fa-solid fa-star" aria-hidden="true"></i></span></p>
+                                    <a class="title" href="./genka.html">原価</a>
+                                    <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
+                                    <p class="meta">
+                                    <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
+                                    <span class="badge"><span class="text-primary">movie</span></span>
+                                    <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
+                                    </p>
+                                </div>
                             </article>
 
                             <article class="course-card" data-year="2025" role="listitem">
@@ -1024,24 +1043,6 @@
                                     <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
                                 </p>
                             </div>
-                            </article>
-
-                            <article class="course-card" data-year="2025" role="listitem">
-                                <img src="./images/NPTS.webp" alt="NPTS" width="60">
-                                <div class="labels">
-                                    <p class="code">GENKA25 <span class="star-icon"><i class="fa-solid fa-star" aria-hidden="true"></i></span></p>
-                                    <a class="title" href="./genka.html">原価</a>
-                                    <p class="meta">2025　秋 <br><span class="text-muted">担当</span> 驚額の殿堂3(スリー)</p>
-                                    <p class="meta">
-                                    <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
-                                    <span class="badge"><span class="text-primary">movie</span></span>
-                                    <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
-                                    <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
-                                    <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
-                                    <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
-                                    <span class="text-fade"><i class="fa-solid fa-user-check" aria-hidden="true"></i></span>
-                                    </p>
-                                </div>
                             </article>
 
                             <article class="course-card" data-year="2024" role="listitem">
