feat: フランクフルト サンプル

--- a/doujin25.html
+++ b/doujin25.html
@@ -400,6 +400,10 @@
         .course-meta2-movie{margin:0 auto;}
         .course-meta2-desc-text{margin: 0 auto}
         .text-gray{color:#ddd; font-size: 1.25em;}
+        .big{
+            font-weight: bold;
+            font-size: 20px;
+        }
 
         @media screen and (max-width: 768px) {
             .main{
@@ -504,6 +508,8 @@
             <section class="main-container">
                 <h2>技術同人誌</h2>
                 <p>雙峰祭でフランクフルト（食品）と並行してメンバー有志による技術同人誌『フランクフルト』を発売するんぽ～<br>店頭では物理本とPDF版を両方頒布して、別途<a href="https://x.com/comictsukuba">コミックつくば！</a>さんでも物理本を頒布するんぽ～</p>
+                <p class="big">↓サンプルはこちらから見れるんぽ！↓</p>
+                <a href="./frankfurt-sample.pdf" class="big">技術同人誌『フランクフルト』サンプル</a>
                 <h2>タイトル一覧（暫定）</h2>
                 <ul>
                     <li class="article">
