--- a/game.html
+++ b/game.html
@@ -602,6 +602,16 @@
                             </div>
                         </div>
                     </a>
+
+                    <a href="https://npo-ar.asaka.party/" target="_blank" rel="noopener">
+                        <div class="card-item">
+                            <i class="fa-solid fa-newspaper card-icon" aria-hidden="true"></i>
+                            <div class="card-text">
+                                <span class="card-title">んぽたそAR</span>
+                                <span class="card-subtitle">2025-11-01</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </section>
         </main>
