add. news alert

--- a/banana-home.html
+++ b/banana-home.html
@@ -982,7 +982,7 @@
                                 <p class="meta">
                                     <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
                                     <span class="badge"><span class="text-primary">movie</span></span>
-                                    <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="text-danger fa-solid fa-volume-high" aria-hidden="true"></i></span>
                                     <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
                                     <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
                                     <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
@@ -1000,7 +1000,7 @@
                                     <p class="meta">
                                     <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
                                     <span class="badge"><span class="text-primary">movie</span></span>
-                                    <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                    <span class="text-fade"><i class="text-danger fa-solid fa-volume-high" aria-hidden="true"></i></span>
                                     <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
                                     <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
                                     <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
@@ -1018,7 +1018,7 @@
                                 <p class="meta">
                                 <span class="text-success"><i class="text-play fa-regular fa-circle-play" aria-hidden="true"></i></span>
                                 <span class="badge"><span class="text-primary">movie</span></span>
-                                <span class="text-fade"><i class="fa-solid fa-volume-high" aria-hidden="true"></i></span>
+                                <span class="text-fade"><i class="text-danger fa-solid fa-volume-high" aria-hidden="true"></i></span>
                                 <span class="text-fade"><i class="fa-solid fa-pen" aria-hidden="true"></i></span>
                                 <span class="text-fade"><i class="fa-solid fa-file" aria-hidden="true"></i></span>
                                 <span class="text-fade"><i class="fa-solid fa-message" aria-hidden="true"></i></span>
