--- a/banana-home.html
+++ b/banana-home.html
@@ -632,7 +632,7 @@
         }
 
         .works-link{
-            /*color:#2449a8; */
+            color:#2449a8;
             text-decoration: none;
             height: 34px;
             display: flex;
@@ -1108,7 +1108,7 @@
                             </div>
 
                         </div>
-                        <p href="./supporters.html" class="works-link">＞ 太客一覧</p>
+                        <a href="./supporters.html" class="works-link">＞ 太客一覧</a>
                       </div>
                       <div class="works-box">
                         <div class="works-box-menu">
