--- a/doujin25.html
+++ b/doujin25.html
@@ -510,7 +510,7 @@
                 <p>雙峰祭でフランクフルト（食品）と並行してメンバー有志による技術同人誌『フランクフルト』を発売するんぽ～<br>店頭では物理本とPDF版を両方頒布して、別途<a href="https://x.com/comictsukuba">コミックつくば！</a>さんでも物理本を頒布するんぽ～</p>
                 <p class="big">↓サンプルはこちらから見れるんぽ！↓</p>
                 <a href="./frankfurt-sample.pdf" class="big">技術同人誌『フランクフルト』サンプル</a>
-                <h2>タイトル一覧（暫定）</h2>
+                <h2>タイトル一覧</h2>
                 <ul>
                     <li class="article">
                         <div class="title">
@@ -585,7 +585,7 @@
                         </div>
                     </li>
                 </ul>
-                <h2>値段（暫定、雙峰祭特別価格）</h2>
+                <h2>値段（雙峰祭特別価格）</h2>
                 <p>物理本：300円（店頭で購入すると無料でPDF版も付くんぽ）<br>PDF版のみ：300円（店頭販売のみ）</p>
             </section>
         </main>
